# rtt-v1

./: README-rtt-dropin.md  README.md  SBOM.json  package.json  pnpm-workspace.yaml  tsconfig.json  validation-report.md
.rtt/: linkmap.json  panel.yaml  policy.json  routes.json
agent/: agent_bus.py
agents/: agents.index.json
auto/: 00-bootstrap.py  10-scan_symbols.py  20-depdoctor.py  30-generate_connectors.py  40-plan_solver.py  50-apply_plan.py
chaos/: cases.yaml
connector-mcp/: README.md  bridge.yaml  mcp_to_rtt.py
cue/: panel.cue
db/: README.md  connectors.json
docs/: ACCEPTANCE-CRITERIA.md  AGENT-COORDINATION.md  ARCHITECTURE.md  DROPIN-MAPPING.md  PHASE-GUIDE.md  RSD-PLAN.md
ilp/: README.md
llama/: README.md  call_llama.py
opt/: update-current.sh
placement/: README.md
plans/: README.md  last_applied.json
providers/: providers.yaml
rtt/: rtt-prd.md  rtt.md
schemas/: rtt.policy.schema.json  rtt.routes.schema.json  rtt.symbol.schema.json
scripts/: system_mapping.md
shims/: mcp-shim  python
skills/: summarization.skill.json
solver/: README.md
spec/: invariants.md
systemd/: rtt-panel.service
tests/: validate.py
tools/: agents_ingest.py  apply_overlay.py  cas_ingest.py  cas_pack.py  ed25519_helper.py  invariants_check.py  json_canon.py  keys_ed25519.py  mcp_ingest.py  plan_build.py  plan_verify.py  policy_match.py  project_providers.py  semver.py  sign_view.py  skills_ingest.py  solver_constraints.py  solver_placement.py  verify_view.py  view_materialize.py  (+1 more)
viewfs/rust-fuse/: Cargo.toml
viewfs/rust-fuse/src/: main.rs
(+168 files in other folders)
